muda quase nada

--- a/bloco_3/dia_3/style2.css
+++ b/bloco_3/dia_3/style2.css
@@ -1,19 +1,10 @@
 
-.super-mario{position: relative; left: 120px; 
-}
+.super-mario{position: relative; left: 120px;}
 
-.goomba{position: 
+.goomba{position: }
 
-}
+.baloon{}
 
-.baloon{
+.bowser{}
 
-}
-
-.bowser{
-
-}
-
-.word {position:
-
-}
+.word {position:}
