--- a/bloco_3/dia_3/style2.css
+++ b/bloco_3/dia_3/style2.css
@@ -1,5 +1,7 @@
 
-.super-mario{position: relative; left: 120px;}
+.super-mario{
+    position: relative; left: 120px;
+}
 
 .goomba{position: }
 
@@ -7,4 +9,8 @@
 
 .bowser{}
 
-.word {position:}
+.word {
+    position: relative;
+    left: 70px;
+    top: 100px;
+}
