--- a/bloco_3/dia_3/style2.css
+++ b/bloco_3/dia_3/style2.css
@@ -3,10 +3,15 @@
     position: relative; left: 120px;
 }
 
-.goomba{position: }
+.goomba {
 
+}
 
-.word {
+.baloon {
+    
+}
+
+.words{
     position: relative;
     left: 70px;
     top: 100px;
