posiciona tudo corretamente e conclui o exercicio

--- a/bloco_3/dia_3/style2.css
+++ b/bloco_3/dia_3/style2.css
@@ -1,18 +1,33 @@
 
 .super-mario{
-    position: relative; left: 120px;
+    position: absolute; 
+    top: 10%;
+    left: 120px;
 }
 
 .goomba {
+    position: absolute;
+    top: 145%;
+}
 
+.bowser{
+    position: absolute;
+    top: 325%;
+    left: 250px;
+    z-index: 1;
 }
 
 .baloon {
+    position: absolute;
+    top: 315%;
+    z-index: 2;
     
 }
 
 .words{
-    position: relative;
+    position: absolute;
     left: 70px;
-    top: 100px;
+    top: 320%;
+    z-index: 3;
 }
+
