--- a/bloco_3/dia_3/style4.css
+++ b/bloco_3/dia_3/style4.css
@@ -13,3 +13,71 @@
   Dica 2: Sugestão de cores padrão. StackOverflow (laranja), W3Schools (verde), MDN (preta), DevDocs (amarela), Trybe (verde).
 
 */
+
+ol {
+    background-color: yellow;
+}
+
+.par {
+    color: darkgreen;
+}
+
+.primo {
+    text-transform: uppercase;
+}
+
+h1, h3 {
+    color:red;
+}
+
+.fonteazul {
+    color: blue
+}
+
+.java {
+    background-color: pink;
+}
+
+.headeritalico {
+    font-size: 40px;
+    border-style: solid;
+    border-color: black;
+}
+
+li {
+    font-size: 20px;
+}
+
+li.liitalico {
+    font-weight: 800;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.stack:hover {
+    font-weight: 900;
+    color: orange;
+}
+
+.w3:hover {
+    font-weight: 900;
+    color: green;
+}
+
+.mozilla:hover {
+    font-weight: 900;
+    color: black;
+}
+
+.devdocs:hover {
+    font-weight: 900;
+    color: yellow;
+}
+
+.trybe:hover {
+    font-weight: 900;
+    color: limegreen;
+}
