muda display de links de navegaçao e estilo de ul

--- a/bloco_3/dia_4/style4.2.css
+++ b/bloco_3/dia_4/style4.2.css
@@ -7,3 +7,14 @@ h1, h2 {
 h3, p, ul {
     font-family: 'Roboto';
 }
+
+.navlinks li {
+    display: inline;
+    
+
+}
+
+ul {
+    list-style-type: none;
+    
+}
