estiliza links de navegaçao

--- a/bloco_3/dia_4/style4.2.css
+++ b/bloco_3/dia_4/style4.2.css
@@ -9,12 +9,14 @@ h3, p, ul {
 }
 
 .navlinks li {
-    display: inline;
-    
+    text-align: center;
+    display: inline-block;
+    width: 100px;
+    padding: 10px;
+    background-color: lavender;
 
 }
 
 ul {
     list-style-type: none;
-    
 }
