--- a/bloco_3/dia_4/style4.2.css
+++ b/bloco_3/dia_4/style4.2.css
@@ -8,15 +8,32 @@ h3, p, ul {
     font-family: 'Roboto';
 }
 
-.navlinks li {
-    text-align: center;
-    display: inline-block;
-    width: 100px;
-    padding: 10px;
-    background-color: lavender;
+p {
+    text-align: justify;
+    width: 80%;
+}
 
+a {
+    text-decoration: none;
+}
+
+td, th {
+    padding: 2px;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.navlinks {
+    display: inline;
+    margin: 0%;
+    padding: 15px;
+    border: solid rgb(0, 204, 204);
+    background-color: lavender;
 }
 
 ul {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
+    <!-- esses 3 itens acima removem a configuração padrão das 'ul'-->
 }
