--- a/bloco_6/dia_6.4/style.css
+++ b/bloco_6/dia_6.4/style.css
@@ -15,14 +15,20 @@
   }
   
   .logo-container {
+    order: 1;
     width: 268px;
     display: flex;
     justify-content: center;
+  }
+
+  .logo-container img {
+
   }
   
   .menu-container {
     display: flex;
     width: 500px;
+    order: 2;
   }
   
   .menu-container ul {
