--- a/bloco_6/dia_6.4/style.css
+++ b/bloco_6/dia_6.4/style.css
@@ -56,6 +56,7 @@
     display: flex;
     flex-direction: column;
     width: 700px;
+    flex-grow: 10;
   }
   
   .movie-container h2 {
@@ -78,6 +79,7 @@
     justify-content: center;
     margin: 10px;
     width: 16%;
+    flex-grow: 1;
   }
   
   .aside-container {
