--- a/bloco_6/dia_6.1/style.css
+++ b/bloco_6/dia_6.1/style.css
@@ -24,6 +24,15 @@ label {
   font-family: sans-serif;
 }
 
+button {
+  background-color: aqua;
+  width: 100px;
+  height: 50px;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 10px 5px 10px 10px;
+}
+
 label#label-nome {
   margin-top: 10px;
 }
@@ -48,24 +57,18 @@ label#label-resumo {
   height: 40px;
 }
 
-
-button {
-  background-color: aqua;
-  width: 100px;
-  height: 50px;
-  border: 1px solid black;
-  border-radius: 5px;
-  margin: 10px 5px 10px 10px;
-}
-
-.invalid-div {
+#invalid-div {
   background-color:lightgoldenrodyellow;
   color: red;
   font-size: 20px;
 }
 
-.valid-div {
+#valid-div {
   background-color:lightskyblue;
   color: black;
   font-size: 20px;
+}
+
+.invalid {
+  border: 1px solid red;
 }
