--- a/bloco_6/dia_6.6/exercise1.css
+++ b/bloco_6/dia_6.6/exercise1.css
@@ -1,10 +1,10 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    margin: 20px;
+  margin: 20px;
 }
 
 h1 {
@@ -23,16 +23,12 @@ img {
   max-width: 100%;
 }
 
-figure {
-  margin: 0;
-}
-
 figure img {
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 480px) {
 
   body {
     background-color: lavender;
@@ -41,24 +37,31 @@ figure img {
   
   h1 {
     font-size: 25px;
+    margin-bottom: 5px;
   }
 
   h2 {
-    font-size: 20px;
+    margin-bottom: 3px;
+    margin-top: 10px;
   }
 
   p {
     font-size: 17px;
   }
-  
-  h2 {
+
+  #cat-grid {
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
   }
 
   figure img {
-    margin: 10px;
-    width: 40%;
+    margin: 5px;
+    width: 155px;
   }
+}
 
+@media screen and (min-width: 480px){
+  body {
+    background-color: rgb(255, 218, 203);
+  }
 }
